# libCGeo

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  RELEASE.md  doxygen.conf  libCGeo.pc.in  libCGeoConfig.cmake.in  libCGeoConfigVersion.cmake.in
example/: convex_hull_example.c  csv_reading_example.c  diagnostics_example.c  graham_scan_example.c
example/example_inputs/: input_A.csv
include/: libCGeo.h  libCGeo_config.h.in
include/libCGeo/: libCGeo.h  libCGeo_config.h.in
src/: convex_hull.c  diagnostics.c  graham_scan.c  libCGeo.c  sweeping_line.c  tirangulation.c
test/: convex_hull_tests.c  graham_scan_tests.c  libCGeo_tests.c
test/test_inputs/: test1.csv
